# simple-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/middlewares/: request_logger_middleware.py
app/utils/: settings.py
