[tool.poetry]
name = "simple-backend"
version = "0.1.0"
description = ""
authors = ["Eric Fang <eric.fang@imfw.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = {extras = ["all"], version = "^0.111.1"}
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
